{
  "@@locale": "en",
  
  "appName":"Converter NOW",
  "reorder": "Reorder",
  "myOrdering": "My ordering",
  "contactDeveloper":"Contact the developer",
  "about":"About",
  "lastCurrenciesUpdate": "Last update: ",
  "today": "today",
  "enableDarkTheme": "Enable dark theme",
  "settings": "Settings",
  "menu": "Menu",
  "donation": "Make a donation",
  "buyMeACoffee": "Buy me a coffee ☕",
  "donationDialog": "Hi, as you might know this app is free and open source. It means that you can use it for free and copy/edit the source code. The developer will not gain nothing for it. But if you also believe in this project and would like to see new features, please consider buying me a coffee.",
  "drawerLogo": "Drawer logo",
  "rateApp": "Rate the app",
  "repoGithub": "Open repo on GitHub",
  "contibuteTranslating": "Contribute translating the app 🌍",
  "search": "Search",
  "clearAll": "Clear all",
  "calculator": "Calculator",
  "significantFigures": "Significant figures",
  "removeTrailingZeros": "Remove trailing zeros",
  "longPressAdvice": "Long press to move items",
  "back": "Back",
  "save": "Save",
  "invalidCharacters": "Error, invalid characters",
  "theme": "Theme",
  "dark": "Dark",
  "light": "Light",
  "system": "System default",
  "amoledDarkTheme": "AMOLED dark theme",
  "copy": "Copy",
  "more": "More",
  "language": "Language",
  "reorderProperties": "Reorder properties",
  "reorderUnits": "Reorder units",
  "chooseProperty": "Choose a property",
  "reorderProperty": "Reorder {property}",
  "@reorderProperty":{
    "placeholders": {
      "property": {
        "type": "String",
        "example": "Length"
      }
    }
  },
  "otherPlatforms": "Converter NOW for other platforms",
  "sourceCode": "Source code",
  "undoClearAllMessage": "Cleared all. Do you want to undo it?",
  "undo": "Undo",
  "routeError1": "This page doesn't exist",
  "routeError2": "Go back to the first page",

  "length": "Length",
  "area": "Area",
  "volume":"Volume",
  "time": "Time",
  "temperature":"Temperature",
  "speed": "Speed",
  "siPrefixes": "SI Prefix",
  "mass": "Mass",
  "pressure": "Pressure",
  "energy":"Energy",
  "angles":"Angles",
  "currencies":"Currencies",
  "shoeSize": "Shoe size",
  "digitalData": "Digital data",
  "power": "Power",
  "torque": "Torque",
  "force": "Force",
  "fuelConsumption": "Fuel consumption",
  "numeralSystems": "Numeral systems",

  "meters": "Meters",
  "centimeters": "Centimeters",
  "inches":"Inches",
  "feet": "Feet",
  "nauticalMiles":"Nautical miles",
  "yards": "Yards",
  "miles": "Miles",
  "millimeters":"Millimeters",
  "micrometers": "Micrometers",
  "nanometers":"Nanometers",
  "angstroms": "Ångström",
  "picometers":"Picometers",
  "kilometers": "Kilometers",
  "astronomicalUnits":"Astronomical Units",
  "lightYears": "Light-years",
  "parsec":"Parsec",
  "mils": "Mils",

  "squareMeters": "Square Meters",
  "squareCentimeters": "Square Centimeters",
  "squareInches":"Square Inches",
  "squareFeet": "Square Feet",
  "squareMiles": "Square Miles",
  "squareYard": "Square Yard",
  "squareMillimeters":"Square Millimeters",
  "squareKilometers": "Square Kilometers",
  "hectares": "Hectares",
  "acres": "Acres",
  "are": "Are",

  "cubicMeters": "Cubic Meters",
  "liters": "Liters",
  "imperialGallons": "Imperial gallons",
  "usGallons":"US Gallons",
  "imperialPints": "Imperial Pints",
  "usPints": "US Pints",
  "milliliters": "Milliliters",
  "tablespoonUs": "Tablespoons US",
  "tablespoonAustralian":"Australian Tablespoons",
  "cups": "Cups",
  "cubicCentimeters": "Cubic Centimeters",
  "cubicFeet": "Cubic Feet",
  "cubicInches":"Cubic Inches",
  "cubicMillimeters": "Cubic Millimeters",
  "imperialFluidOunces": "Imperial Fluid Ounces",
  "usFluidOunces": "US Fluid Ounces",
  "imperialGill": "Imperial Gill",
  "usGill": "US Gill",

  "seconds": "Seconds",
  "deciseconds": "Deciseconds",
  "centiseconds": "Centiseconds",
  "milliseconds": "Milliseconds",
  "microseconds":"Microseconds",
  "nanoseconds": "Nanoseconds",
  "minutes": "Minutes",
  "hours": "Hours",
  "days": "Days",
  "weeks":"Weeks",
  "years": "Years (365)",
  "lustrum": "Lustrum",
  "decades": "Decades",
  "centuries":"Centuries",
  "millennium": "Millennium",

  "fahrenheit": "Fahrenheit",
  "celsius": "Celsius (Centigrade)",
  "kelvin": "Kelvin",
  "reamur": "Reamur",
  "romer": "Rømer",
  "delisle": "Delisle",
  "rankine": "Rankine",

  "metersSecond": "Meters per Second",
  "kilometersHour": "Kilometers per Hour",
  "milesHour": "Miles per Hour",
  "knots": "Knots",
  "feetSecond": "Feet per Second",
  "minutesPerKilometer": "Minutes per Kilometer",

  "grams": "Grams",
  "ettograms": "Ettograms",
  "kilograms": "Kilograms",
  "pounds":" Pounds",
  "ounces": "Ounces",
  "quintals": "Quintals",
  "tons": "Tons",
  "milligrams": "Milligrams",
  "uma": "Unified atomic mass unit",
  "carats": "Carats",
  "centigrams": "Centigrams",
  "pennyweights": "Pennyweights",
  "troyOunces": "Troy ounces",
  "stones": "Stones",

  "pascal": "Pascal",
  "atmosphere":"Atmosphere",
  "bar": "Bar",
  "millibar":"Millibar",
  "psi": "Pounds per square inch",
  "torr": "Torricelli",
  "hectoPascal": "Hectopascal",
  "inchesOfMercury": "Inches of mercury",

  "joule": "Joule",
  "calorie": "Calorie",
  "kilowattHour": "Kilowatt hour",
  "electronvolt": "Electron volt",
  "footPound": "Foot pound",

  "degree": "Degree",
  "minutesDegree": "Minutes",
  "secondsDegree": "Seconds",
  "radiansDegree": "Radians",

  "usd": "US Dollar",
  "eur": "Euro",
  "gbp": "British Pound",
  "inr": "Indian Rupee",
  "cny": "Chinese Yuan",
  "jpy": "Japanese Yen",
  "chf": "Swiss Franc",
  "sek": "Swedish Krona",
  "rub": "Russian Ruble",
  "cad": "Canadian Dollar",
  "krw": "South Korean Won",
  "brl": "Brazilian Real",
  "hkd": "Hong Kong Dollar",
  "aud": "Australian Dollar",
  "nzd": "New Zealand Dollar",
  "mxn": "Mexican Peso",
  "sgd": "Singapore Dollar",
  "nok": "Norwegian Krone",
  "trY": "Turkish Lira",
  "zar": "South African Rand",
  "dkk": "Danish Krone",
  "pln": "Polish Złoty",
  "thb": "Thai Baht",
  "myr": "Malaysian Ringgit",
  "huf": "Hungarian Forint",
  "czk": "Czech Koruna",
  "ils": "Israeli Shekel",
  "idr": "Indonesian Rupiah",
  "php": "Philippine Peso",
  "ron": "Romanian Leu",
  "bgn": "Bulgarian Lev",
  "hrk": "Croatian Kuna",
  "isk": "Icelandic Króna",
  "twd": "New Taiwan Dollar",
  "mad": "Moroccan Dirham",

  "euChina": "EU & China",
  "ukIndiaChild": "UK & India - Child",
  "ukIndiaMan": "UK & India - Man",
  "ukIndiaWoman": "UK & India - Woman",
  "usaCanadaChild": "USA & Canada - Child",
  "usaCanadaMan": "USA & Canada - Man",
  "usaCanadaWoman": "USA & Canada - Woman",
  "japan": "Japan",

  "watt": "Watt",
  "milliwatt": "Milliwatt",
  "kilowatt": "Kilowatt",
  "megawatt": "Megawatt",
  "gigawatt": "GigaWatt",
  "europeanHorsePower": "European horsepower",
  "imperialHorsePower": "Imperial horsepower",

  "newton": "Newton",
  "dyne": "Dyne",
  "poundForce": "Pound-force",
  "kilogramForce": "Kilogram-force",
  "poundal": "Poundal",

  "newtonMeter": "Newton meter",
  "dyneMeter": "Dyne meter",
  "poundForceFeet": "Pound-force feet",
  "kilogramForceMeter": "Kilogram-force meter",
  "poundalMeter": "Poundal meter",

  "kilometersLiter": "Kilometers per liter",
  "liters100km": "Liters per 100 km",
  "milesUsGallon": "Miles per US Gallon",
  "milesImperialGallon": "Miles per imperial Gallon",

  "decimal": "Decimal",
  "hexadecimal": "Hexadecimal",
  "octal": "Octal",
  "binary": "Binary",

  "bit": "Bit",
  "nibble": "Nibble",
  "kilobit": "KiloBit",
  "megabit": "MegaBit",
  "gigabit": "GigaBit",
  "terabit": "TeraBit",
  "petabit": "PetaBit",
  "exabit": "ExaBit",
  "kibibit": "Kibibit",
  "mebibit": "Mebibit",
  "gibibit": "GibiBit",
  "tebibit": "Tebibit",
  "pebibit": "Pebibit",
  "exbibit": "Exbibit",
  "byte": "Byte",
  "kilobyte": "KiloByte",
  "megabyte": "MegaByte",
  "gigabyte": "GigaByte",
  "terabyte": "TeraByte",
  "petabyte": "PetaByte",
  "exabyte": "ExaByte",
  "kibibyte": "Kibibyte",
  "mebibyte": "Mebibyte",
  "gibibyte": "GibiByte",
  "tebibyte": "Tebibyte",
  "pebibyte": "Pebibyte",
  "exbibyte": "Exbibyte",

  "base": "Base",
  "deca": "Deca-",
  "hecto": "Hecto-",
  "kilo": "Kilo-",
  "mega": "Mega-",
  "giga": "Giga-",
  "tera": "Tera-",
  "peta": "Peta-",
  "exa": "Exa-",
  "zetta": "Zetta-",
  "yotta": "Yotta-",
  "deci": "Deci-",
  "centi": "Centi-",
  "milli": "Milli-",
  "micro": "Micro-",
  "nano": "Nano-",
  "pico": "Pico-",
  "femto": "Femto-",
  "atto": "Atto-",
  "zepto": "Zepto-",
  "yocto": "Yocto-"
}
