...
const Map<PROPERTYX, List<dynamic>> unitsOrder = {
  PROPERTYX.length: [
    LENGTH.meters,
    LENGTH.feet,
    LENGTH.yards,
    LENGTH.kilometers,
    LENGTH.miles,
    LENGTH.nauticalMiles,
    LENGTH.centimeters,
    LENGTH.inches,
    LENGTH.mils,
    LENGTH.millimeters,
    LENGTH.micrometers,
...
    LENGTH.astronomicalUnits,
    LENGTH.lightYears,
    LENGTH.parsec,
  ],
  PROPERTYX.area: [
    AREA.squareMeters,
    AREA.squareFeet,
    AREA.squareYard,
    AREA.hectares,
    AREA.acres,
    AREA.squareKilometers,
    AREA.squareMiles,
    AREA.squareCentimeters,
...
